# jisho.rs

./: .gitignore  Cargo.toml  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/jisho/: JishoPlugin.kt
example/: README.md  jisho_example.dart  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/jisho_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/assets/index/: .managed.json  meta.json
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
example/web/: index.html
index/: .managed.json  meta.json
ios/: .gitignore  jisho.podspec
ios/Classes/: JishoPlugin.h  JishoPlugin.m  SwiftJishoPlugin.swift
ios/upstream/: libjisho.h
lib/: jisho.dart
lib/src/: bindings.dart  dlib.dart  jisho_base.dart  types.dart
src/: bin.rs  lib.rs  main.rs  search.rs
test/: jisho_test.dart
