[package]
name = "jisho"
version = "0.1.0"
authors = ["Sach97 <sacha.arbonel@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.10.2"
tantivy-tokenizer-tiny-segmenter = { git = "https://github.com/Sach97/tantivy-tokenizer-tiny-segmenter", branch = "bump" }

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "jisho"
path = "src/bin.rs"